--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.Rmd  linguist-detectable
-*.rmd  linguist-detectable
+
+*.Rmd  linguist-detectable=true
+*.rmd  linguist-detectable=true
+
+*.Rmd  linguist-language=R
